# client-server-app

./: CMakeLists.txt  README.md
include/: Client.h  DataProcessor.h  DataProcessorUtils.h  DisplayServer.h  NetworkBase.h  SocketManager.h
src/: Client.cpp  DataProcessor.cpp  DataProcessorUtils.cpp  DisplayServer.cpp  NetworkBase.cpp  SocketManager.cpp  client_main.cpp  data_processor_main.cpp  display_server_main.cpp
tests/: DataProcessorTests.cpp
